# ShabakatServer

./: .env.example  .geminiignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  HANDOFF.md  SHABAKAT_SERVER_PLAN.md  build-apkg.sh  deploy.sh  docker-compose.yml  fingerprints.json  fix_shabakat.sh
CONTROL/: config.json  post-install.sh  pre-install.sh  pre-remove.sh  start-stop.sh
resources/: mac-vendors.json
scripts/: shabakat-debug.sh
skills/shabakat-server-pro/: SKILL.md
src/: config.rs  main.rs  types.rs
src/api/: adguard.rs  assets.rs  auth.rs  dashboard.rs  debug.rs  devices.rs  history.rs  mod.rs  networks.rs  notifications.rs  outages.rs  providers.rs  scan.rs  settings.rs  speed_test.rs  tools.rs  ws.rs
src/dashboard/: scoring.rs
src/middleware/: auth.rs
src/monitor/: compactor.rs  mod.rs  outage_detector.rs  presence.rs  router.rs  sys_metrics.rs
src/notifications/: mod.rs  smtp.rs  telegram.rs  webhook.rs
src/scanner/: arp.rs  deep.rs  digital_fence.rs  fingerprints.rs  mod.rs  mod.rs.tmp  network.rs  network_identity.rs  ping.rs  ports.rs  resolver.rs  router_api.rs  sys_metrics.rs  vulnerability.rs
src/scheduler/: mod.rs
src/storage/: compactor.rs  devices.rs  history.rs  metrics.rs  migrations.rs  mod.rs  networks.rs  providers.rs  schema.sql  settings.rs  system_status.rs
src/tools/: ping.rs
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/components/: NetworkStarMap.tsx  app-shell.tsx  device-details-panel.tsx  device-row.tsx  topology-map.tsx  (+4 more)
(+37 files in other folders)
