[package]
name = "shabakat-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shabakat-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors", "limit"] }
libsql = { version = "0.6.0", features = ["hrana"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
ipnet = "2.9"
dns-lookup = "2"
mdns-sd = "0.19"
socket2 = { version = "0.5", features = ["all"] }
log = "0.4"
env_logger = "0.11"
get_if_addrs = "0.5"
default-net = "0.22"
wake-on-lan = "0.2"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
axum-extra = { version = "0.9", features = ["cookie"] }
time = { version = "0.3.47", features = ["local-offset", "macros", "formatting", "parsing"] }
